MAINTAINERCLEANFILES = Makefile.in

noinst_LTLIBRARIES = libeon_ecore_common.la

libeon_ecore_common_la_CFLAGS = \
-I$(top_srcdir)/src/include \
-I. \
@EON_CFLAGS@

libeon_ecore_common_la_SOURCES = \
eon_ecore_common.c

libeon_ecore_common_la_LIBADD =

libeon_ecore_common_la_DEPENDENCIES =

libeon_ecore_common_la_LDFLAGS =

