MAINTAINERCLEANFILES = \
Makefile.in

noinst_LTLIBRARIES = libtheme_basic.la

AM_CPPFLAGS = \
-I$(top_srcdir)/src/include \
-I$(top_srcdir)/src/include/theme \
-I. \
@EON_CFLAGS@

# theme_basic_control_bar.c \
# theme_basic_control_arrow.c \
# theme_basic_radio.c \
# theme_basic_color.c \
# theme_basic_entry.c \
# theme_basic_checkbox.c \
# theme_basic_image.c \
# theme_basic_frame.c \
# theme_basic_layout.c \
# theme_basic_progressbar.c \
# theme_basic_scrollbar.c \
# theme_basic_scrollview.c \
# theme_basic_spin.c \
# theme_basic_splitter.c \
# theme_basic_toggle.c

libtheme_basic_la_SOURCES = \
theme_basic.c \
theme_basic_control_button.c \
theme_basic_button.c \
theme_basic_label.c

